added graphics and images

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -15,8 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="48dp"
-        android:background="#20000000">
+        android:background="@color/colorPrimary">
 
         <TextView
             android:id="@+id/skip"
