--- a/app/src/main/res/layout/activity_product_page.xml
+++ b/app/src/main/res/layout/activity_product_page.xml
@@ -1,11 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="#fff" android:layout_width="match_parent" android:layout_height="match_parent">
-    <androidx.viewpager.widget.ViewPager android:id="@+id/pager" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/include" android:layout_below="@+id/toolbar"/>
-    <RelativeLayout android:orientation="horizontal" android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize">
-        <ImageView android:padding="16dp" android:clickable="true" android:layout_width="?attr/actionBarSize" android:layout_height="?attr/actionBarSize" android:src="@drawable/ic_close_black_48dp" android:scaleType="centerCrop" android:onClick="close"/>
-        <ImageView android:id="@+id/fav" android:padding="17dp" android:clickable="true" android:layout_width="?attr/actionBarSize" android:layout_height="?attr/actionBarSize" android:src="@drawable/fave_outline" android:scaleType="centerCrop" android:layout_toLeftOf="@+id/cart" android:onClick="close"/>
-        <ImageView android:id="@+id/cart" android:padding="17dp" android:clickable="true" android:layout_width="?attr/actionBarSize" android:layout_height="?attr/actionBarSize" android:src="@drawable/cart_outline" android:scaleType="centerCrop" android:layout_toLeftOf="@+id/share" android:onClick="close"/>
-        <ImageView android:id="@+id/share" android:padding="17dp" android:clickable="true" android:layout_width="?attr/actionBarSize" android:layout_height="?attr/actionBarSize" android:src="@drawable/ic_share_black_48dp" android:scaleType="centerCrop" android:layout_alignParentRight="true" android:onClick="close"/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#fff">
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/include"
+        android:layout_below="@+id/toolbar" />
+
+    <RelativeLayout
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="?attr/actionBarSize"
+            android:layout_height="?attr/actionBarSize"
+            android:clickable="true"
+            android:onClick="close"
+            android:padding="16dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_close_black_48dp" />
+
+        <ImageView
+            android:id="@+id/fav"
+            android:layout_width="?attr/actionBarSize"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_toLeftOf="@+id/cart"
+            android:clickable="true"
+            android:onClick="close"
+            android:padding="17dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/fave_outline" />
+
+        <ImageView
+            android:id="@+id/cart"
+            android:layout_width="?attr/actionBarSize"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_toLeftOf="@+id/share"
+            android:clickable="true"
+            android:onClick="close"
+            android:padding="17dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/cart_outline" />
+
+        <ImageView
+            android:id="@+id/share"
+            android:layout_width="?attr/actionBarSize"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_alignParentRight="true"
+            android:clickable="true"
+            android:onClick="close"
+            android:padding="17dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_share_black_48dp" />
     </RelativeLayout>
-    <include android:id="@+id/include" layout="@layout/add_to_cart_bar"/>
+
+    <include
+        android:id="@+id/include"
+        layout="@layout/add_to_cart_bar" />
 </RelativeLayout>
