--- a/app/src/main/res/layout/product_list_item.xml
+++ b/app/src/main/res/layout/product_list_item.xml
@@ -1,21 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content">
-    <RelativeLayout android:id="@+id/icon_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16dp">
-        <ProgressBar android:id="@+id/progressBar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" style="?android:attr/progressBarStyleSmall"/>
-        <ImageView android:id="@+id/icon" android:layout_width="78dp" android:layout_height="78dp" android:scaleType="centerCrop" android:layout_centerVertical="true"/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="16dp">
+
+    <RelativeLayout
+        android:id="@+id/icon_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="16dp">
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+
+        <ImageView
+            android:id="@+id/icon"
+            android:layout_width="78dp"
+            android:layout_height="78dp"
+            android:layout_centerVertical="true"
+            android:scaleType="centerCrop" />
     </RelativeLayout>
-    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/linearLayout" android:layout_toRightOf="@+id/icon_layout" android:layout_centerVertical="true">
-        <TextView android:textStyle="bold" android:textColor="#000" android:id="@+id/name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="4dp" android:text="Product Name"/>
-        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="4dp">
-            <TextView android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:id="@+id/price" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Price"/>
-            <TextView android:textColor="#797979" android:id="@+id/quantity" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:text="Quantity"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/linearLayout"
+        android:layout_toRightOf="@+id/icon_layout"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:text="Product Name"
+            android:textColor="#000"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Price"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/quantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:text="Quantity"
+                android:textColor="#797979" />
         </LinearLayout>
-        <TextView android:textSize="10dp" android:textStyle="bold" android:textColor="#fff" android:id="@+id/sale" android:background="@drawable/rounded_rect" android:paddingLeft="8dp" android:paddingTop="4dp" android:paddingRight="8dp" android:paddingBottom="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="SALE"/>
+
+        <TextView
+            android:id="@+id/sale"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_rect"
+            android:paddingLeft="8dp"
+            android:paddingTop="4dp"
+            android:paddingRight="8dp"
+            android:paddingBottom="4dp"
+            android:text="SALE"
+            android:textColor="#fff"
+            android:textSize="10dp"
+            android:textStyle="bold" />
     </LinearLayout>
-    <LinearLayout android:orientation="horizontal" android:id="@+id/linearLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true">
-        <ImageView android:layout_gravity="center_vertical" android:id="@+id/add_button" android:padding="8dp" android:layout_width="42dp" android:layout_height="42dp" android:src="@drawable/ic_add_grey600_48dp" android:scaleType="centerInside"/>
-        <TextView android:textSize="20sp" android:textColor="#000" android:gravity="center" android:layout_gravity="center_vertical" android:id="@+id/count" android:layout_width="wrap_content" android:layout_height="42dp" android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:text="0" android:layout_toRightOf="@+id/add_button"/>
-        <ImageView android:layout_gravity="center_vertical" android:id="@+id/remove_button" android:padding="8dp" android:layout_width="42dp" android:layout_height="42dp" android:src="@drawable/ic_remove_grey600_48dp" android:scaleType="centerInside" android:layout_toRightOf="@+id/count"/>
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/add_button"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_gravity="center_vertical"
+            android:padding="8dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_add_grey600_48dp" />
+
+        <TextView
+            android:id="@+id/count"
+            android:layout_width="wrap_content"
+            android:layout_height="42dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_toRightOf="@+id/add_button"
+            android:gravity="center"
+            android:text="0"
+            android:textColor="#000"
+            android:textSize="20sp" />
+
+        <ImageView
+            android:id="@+id/remove_button"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_gravity="center_vertical"
+            android:layout_toRightOf="@+id/count"
+            android:padding="8dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_remove_grey600_48dp" />
     </LinearLayout>
-    <TextView android:textStyle="bold" android:orientation="horizontal" android:id="@+id/outofstocks" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="OUT OF STOCKS" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
+
+    <TextView
+        android:id="@+id/outofstocks"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:orientation="horizontal"
+        android:text="OUT OF STOCKS"
+        android:textStyle="bold"
+        android:visibility="gone" />
 </RelativeLayout>
