--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
-        <item android:icon="@drawable/logo" android:id="@+id/home" android:title="Home"/>
-        <item android:icon="@drawable/logo" android:id="@+id/navigation_item_2" android:title="Item  group 4"/>
+        <item
+            android:id="@+id/home"
+            android:icon="@drawable/logo"
+            android:title="Home" />
+        <item
+            android:id="@+id/navigation_item_2"
+            android:icon="@drawable/logo"
+            android:title="Item  group 4" />
     </group>
-    <item android:id="@+id/navigation_subheader" android:title="Title">
+    <item
+        android:id="@+id/navigation_subheader"
+        android:title="Title">
         <menu>
-            <item android:icon="@drawable/logo" android:id="@+id/navigation_sub_item_1" android:title="Item 5"/>
-            <item android:icon="@drawable/logo" android:id="@+id/navigation_sub_item_2" android:title="Item 6"/>
+            <item
+                android:id="@+id/navigation_sub_item_1"
+                android:icon="@drawable/logo"
+                android:title="Item 5" />
+            <item
+                android:id="@+id/navigation_sub_item_2"
+                android:icon="@drawable/logo"
+                android:title="Item 6" />
         </menu>
     </item>
-    <item android:id="@+id/logout" android:title="Log out"/>
+    <item
+        android:id="@+id/logout"
+        android:title="Log out" />
 </menu>
