--- a/app/src/main/res/menu/menu_cart.xml
+++ b/app/src/main/res/menu/menu_cart.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/clear_cart" android:orderInCategory="100" android:title="Clear Cart" app:showAsAction="never"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/clear_cart"
+        android:orderInCategory="100"
+        android:title="Clear Cart"
+        app:showAsAction="never" />
 </menu>
